Updates, but incorrect answers are not working yet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 	<head prefix="og: http://ogp.me/ns#">
 
-		<title>Kuwamaru's Halloween Adventure</title> <!--Up to 60-70 Characters. Optimal Format: Primary Keyword - Secondary Keyword | Brand Name-->
+		<title>Kuwamaru's Tajima Yahei Sericulture Farm Quiz</title> <!--Up to 60-70 Characters. Optimal Format: Primary Keyword - Secondary Keyword | Brand Name-->
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self' https:; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; script-src 'self' 'unsafe-eval'">
-		<meta name="description" content="A Halloween adventure game built using Monogatari and featuring the Tajima Yahei Sericulture Farm World Heritage Site"> <!--Page description. No longer than 155 characters.-->
+		<meta name="description" content="A quiz game built using Monogatari and featuring the Tajima Yahei Sericulture Farm World Heritage Site"> <!--Page description. No longer than 155 characters.-->
 		<meta name="keywords" content="">
 		<meta name="author" content="Isesaki English Media"> <!--Name of the author.-->
 
